Fix roster spacing (#87)
Use large desktop, fix button with dropdown spacing

--- a/src/assets/styles/_uswds-theme-components.scss
+++ b/src/assets/styles/_uswds-theme-components.scss
@@ -52,10 +52,11 @@ $theme-input-state-border-width: 0.5;
 // Header
 $theme-header-font-family: 'ui';
 $theme-megamenu-logo-text-width: 33%;
+$theme-header-max-width: 'desktop-lg';
 
 // Navigation
 $theme-navigation-font-family: 'ui';
-$theme-navigation-width: 'desktop';
+$theme-navigation-width: 'desktop-lg';
 
 // Search
 $theme-search-font-family: 'ui';
